--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,6 +33,10 @@
   branch = "master"
   name = "github.com/taskie/jc"
 
+[[constraint]]
+  branch = "master"
+  name = "github.com/taskie/osplus"
+
 [prune]
   go-tests = true
   unused-packages = true
